# PrimaLearn

./: .gitignore  README.md  pyproject.toml
data/spelke_benchmark_v2/: manifest.json
data/synthetic_compounding/: synth_extract_tile_0.json  synth_extract_tile_1.json  synth_extract_tile_2.json  synth_extract_tile_3.json  synth_extract_tile_4.json
data/synthetic_count_cells/: synth_count_cells_00.json  synth_count_cells_01.json  synth_count_cells_02.json  synth_count_cells_03.json  synth_count_cells_04.json  synth_count_cells_05.json  synth_count_cells_06.json  synth_count_cells_07.json  synth_count_cells_08.json  synth_count_cells_09.json  synth_count_cells_10.json  synth_count_cells_11.json  synth_count_cells_12.json  synth_count_cells_13.json  synth_count_cells_14.json  synth_count_cells_15.json  synth_count_cells_16.json  synth_count_cells_17.json  synth_count_cells_18.json  synth_count_cells_19.json  synth_count_cells_20.json  synth_count_cells_21.json  synth_count_cells_22.json  synth_count_cells_23.json  synth_count_cells_24.json  synth_count_cells_25.json  synth_count_cells_26.json  synth_count_cells_27.json  synth_count_cells_28.json  synth_count_cells_29.json
data/synthetic_cross_system/: synth_flip_h_0.json  synth_flip_h_1.json  synth_flip_h_2.json  synth_flip_v_0.json  synth_flip_v_1.json  synth_flip_v_2.json  synth_rotate180_0.json  synth_rotate180_1.json  synth_rotate180_2.json  synth_rotate270_0.json  synth_rotate270_1.json  synth_rotate270_2.json  synth_rotate90_0.json  (+2 more)
paper/: paper.html
src/: __init__.py  cli.py
tests/: test_checkpoint.py
(+1261 files in other folders)
