[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootstrap-substrate"
version = "0.1.0"
description = "Spelke-Initialized Library Learning: Bootstrapping Higher Cognition from Core Knowledge Primitives via Wake-Sleep Program Synthesis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Purna Sainath Reddy V"}
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "rich>=13.0",
    "click>=8.1",
    "jsonlines>=3.1",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.0.270",
    "ipykernel>=6.23",
    "jupyter>=1.0",
]
llm = [
    "openai>=1.0",
    "tiktoken>=0.4",
]

[project.scripts]
bootstrap = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
